@startuml
class Usuario{
    -nome : String
    -senha : String
    -cpf : String
    -administrador : bool

    +consultaDeBlanqueta(blanqueta : Blanqueta) : void
    +consultaDeProcessos(processo : Processo) : void
    +consultaDeProdutos(produto : Produto) : void
}
class UsuarioAdministrador{
    'controle de usuarios
    +adicionarUsuario (nome : String, senha : String, CPF : String) : Usuario
    +removerUsuario (usuario : Usuario) : void
    +promoverAdministrador (usuario : Usuario) : void
    +rebaixarParaComum (usuario : Usuario) : void
    'controle de Blanquetas
    +adicionarBlanqueta (blanqueta : Blanqueta) : Blanqueta
    +removerBlanqueta (blanqueta : Blanqueta) : void
    'controle de Produtos
    +adicionarProduto (produto : Produto) : Produto
    +removerProduto (produto : Produto) : void
    'controle de Processo
    +adicionarProcesso (processo : Processo) : Processo
    +removerProcesso (Processo : Processo)  : void
    'controle de Empresa
    +adicionarEmpresa (nome : String) : Empresa
    +removerEmpresa (empresa: Empresa)
}
class Blanqueta{
    -posicao : String
    -maquina : String
    -repeticoes : int
    -observacoes : String
}
class Processo{
    -dataEHora : Date
    -blanqueta : blanqueta
    -produto : Produto
    
}
class Produto{
    -codigo : String
    -nome : String
    -cliente : String
    
    
}
class Empresa{
    -nome : String

}


Blanqueta "1..1" --- "0..*" Processo : compativel
Produto"1..1" --- "0..*" Processo:manufatura

UsuarioAdministrador --|> Usuario

Usuario -- Processo : consulta
Usuario --  Blanqueta : consulta
Usuario -- Produto : consulta
Produto "0..*"--"1..1" Empresa : pertence
@enduml